Alteração adicionado nova linha h1 no body

--- a/Atividade1/src/main/webapp/index.html
+++ b/Atividade1/src/main/webapp/index.html
@@ -9,6 +9,8 @@
      </head>
 
     <body>
+    <!-- Formulário de cadastro -->
+	<h1>Cadastro de usuário</h1>
         <div class="container">
 
             <div class="left-Side">
